...
  );

  return (
    <View className="gap-2 ">
      <View className="relative justify-end">
        <Input
          testID="chat-input"
          value={value}
          onChangeText={onChange}
          placeholder="輸入你的問題..."
          multiline
          onKeyPress={handleSend}
          className="h-auto max-h-32 min-h-11 rounded-[22px] border-0 bg-muted pl-4 pr-12 py-2.5 text-[15px]"
        />

        <SendButton
          visible={canSend}
          onPress={onSend}
          testID="chat-send-button"
        />
      </View>
    </View>
  );
}

...
