appId: com.anonymous.sakura-navi-app
---
- launchApp
- waitForAnimationToEnd
- assertVisible:
    id: chat-open-sidebar
- tapOn:
    id: chat-open-sidebar
- assertVisible:
    id: sidebar-new-chat
- tapOn:
    id: sidebar-new-chat
- assertVisible:
    id: chat-input
- tapOn:
    id: chat-input
- inputText: 我想找就業補助
- tapOn:
    id: chat-send-button
- assertVisible: 推薦原因
